--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,19 @@ body {
 	height: 30px;
 }
 
+.active .icon svg {
+	fill: #fff;
+}
+
+.active .icon-text {
+	color: #fff;
+}
+
+.active .icon-count {
+	background-color: #f55400;
+	color: #fff;
+}
+
 .icon-text {
 	color: #224b7a;
 	font-size: 12px;
@@ -122,7 +135,7 @@ body {
 .icon-count {
 	position: absolute;
 	top: 4px;
-	background: #fff;
+	background-color: #fff;
 	border-radius: 50px;
 	font-size: 9px;
 	right: -6px;
