--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
 
 .img-fluid {
 	max-height: 150px;
+	min-height: 145px;
 	border-radius: 5px;
 	box-shadow: 0 1px 0 0 #d7d8db,0 0 0 1px #e3e4e8;
 }
@@ -47,6 +48,8 @@ body {
 }
 
 .flex-item {
+	min-width: 100px;
+	min-height: 150px;
 	padding: 0.5em 1em 1em 0;
 	position: relative;
 }
@@ -158,7 +161,7 @@ body {
 /*
  * NEW THEME
  */
-/**/ 
+/*
 .header-blue {
 	position: absolute;
 	background: #2f3c4e;
@@ -178,4 +181,4 @@ body {
 	font-size: 12px;
 	text-align: center;
 	margin-top: -6px;
-}
+}*/ 
